--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,22 @@ certifi==2018.11.29
 chardet==3.0.4
 coreapi==2.3.3
 coreschema==0.0.4
+dj-database-url==0.5.0
 Django==2.2.5
 django-cors-headers==3.1.0
+django-heroku==0.3.1
 djangorestframework==3.10.3
 djangorestframework-jwt==1.11.0
+gunicorn==19.9.0
 idna==2.8
 itypes==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+psycopg2==2.8.3
 PyJWT==1.7.1
 pytz==2019.2
 requests==2.22.0
 sqlparse==0.3.0
 uritemplate==3.0.0
 urllib3==1.25.3
+whitenoise==4.1.3
